# mongod-proxy

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: explain.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: wire_decoder.rs
logger/: Cargo.toml
logger/src/: log.rs  main.rs
scripts/: e2e.sh
src/: decoder.rs  encoder.rs  header.rs  ids.rs  lib.rs  message.rs  op_code.rs  operation.rs  redact.rs  srv.rs  uri.rs
src/fixtures/: mod.rs
src/fixtures/headers/: mod.rs
src/fixtures/messages/: mod.rs
src/operation/: mod.rs  op_msg.rs  op_query.rs  op_reply.rs
src/serve/: log.rs  mod.rs  probe.rs  rewrite_hello.rs  service.rs
src/serve/explain/: build.rs  classify.rs  error.rs  layer.rs  mod.rs  parse.rs  sink.rs  util.rs  wire.rs
src/serve/explain/model/: event.rs  mod.rs  namespace.rs  newtypes.rs  open_vocab.rs  plan_details.rs  stage.rs
tests/: e2e_explain.rs  e2e_from_uri.rs  e2e_intercept.rs  e2e_probe.rs
tests/common/: mod.rs
