[package]
name = "mongod-proxy"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bitflags = "2.9.0"
bson = "2.15.0"
futures = { workspace = true }
nutype = { version = "0.6", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
rustls-pki-types = "1.11.0"
tokio-rustls = "0.26.2"
webpki-roots = "1.0.0"
hickory-resolver = "0.26.1"

[dev-dependencies]
anyhow = "1.0.98"
atlas-local = "0.6.1"
bollard = "=0.20.1"
mongodb = { version = "3.1" }
pretty_assertions = "1.4.1"
rstest = "0.25.0"
scopeguard = "1"
tracing-subscriber = "0.3.19"

[[example]]
name = "explain"
path = "examples/explain.rs"

[features]
default = []
# Off by default; opt-in for development/testing scenarios where
# backpressure is undesirable and the OOM risk is acceptable.
unbounded-sink = []

[workspace]
members = [".", "logger"]
# `fuzz/` is its own crate so cargo-fuzz can apply sanitizer flags only there.
exclude = ["fuzz"]

[workspace.dependencies]
futures = "0.3.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tokio-stream = "0.1.17"
tracing = { version = "0.1.41", features = ["attributes"] }
