[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = { workspace = true }
mongod-proxy = { path = ".." }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.19"
